@@ -221,6 +221,9 @@ Documentation
 Tools/Demos
 -----------
 
+- Issue #18449: Make Tools/demo/ss1.py work again on Python 3.  Patch by
+  Févry Thibault.
+
 - Issue #15239: Make mkstringprep.py work again on Python 3.
 
 - Issue #12990: The "Python Launcher" on OSX could not launch python scripts
